test/error/MethodDuplicate.fu
public static class Test
{
	public static bool Run() => true;
	public static bool Run() => true; //ERROR: Duplicate symbol
}
